# s5-rust

./: .gitignore  Cargo.toml  README.md  install.sh
.github/workflows/: release.yml
src/: main.rs
